--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -26,15 +26,16 @@
         ads:adUnitId="@string/admob_banner_onlistviews"></com.google.android.gms.ads.AdView>
 
     <ProgressBar
+        android:id="@+id/pbarSquad"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pbarSquad"
-        android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:max="100"
-        android:progress="0"/>
+        android:max="1000"
+        android:progress="0" />
 
 
 </RelativeLayout>
