--- a/app/src/main/res/layout/komentar_row.xml
+++ b/app/src/main/res/layout/komentar_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/screen_background">
 
@@ -11,7 +12,8 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:textColor="@color/screen_font"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
+
     <TextView
         android:id="@+id/tvKomentar"
         android:layout_width="fill_parent"
@@ -19,6 +21,6 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:ellipsize="end"
-        android:textSize="12sp"
-        android:textColor="@color/screen_font"      />
+        android:textSize="12dp"
+        android:textColor="@color/screen_font" />
 </LinearLayout>
