--- a/app/src/main/res/layout/saopstenje_row.xml
+++ b/app/src/main/res/layout/saopstenje_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <TextView
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvDatumVesti"
         android:layout_alignParentLeft="true"
-        android:text="15.5.2015"/>
+        android:text="15.5.2015" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -17,13 +17,14 @@
         android:id="@+id/tvNaslov"
         android:layout_toRightOf="@+id/tvDatumVesti"
         android:layout_below="@+id/tvNazivIgraca"
-        android:text="naslov"/>
+        android:text="naslov" />
+
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:id="@+id/ivSlika"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvDatumVesti"/>
+        android:layout_below="@+id/tvDatumVesti" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -32,8 +33,7 @@
         android:id="@+id/tvCeloSaopstenje"
         android:layout_toRightOf="@+id/ivSlika"
         android:layout_below="@+id/tvNaslov"
-        android:text="kjd jk j kjh sjdh jfgk jf jfkj jf djf kf kjf kjfg kjd jhjd jf kj kjgh kfjg jkjf kjfdg jf jf jfkg jfkjfkjhdfk jhdfkj hk fkdfjg kjfg kjg jdhg k"/>
-
+        android:text="kjd jk j kjh sjdh jfgk jf jfkj jf djf kf kjf kjfg kjd jhjd jf kj kjgh kfjg jkjf kjfdg jf jf jfkg jfkjfkjhdfk jhdfkj hk fkdfjg kjfg kjg jdhg k" />
 
 
 </RelativeLayout>
