--- a/app/src/main/res/layout/standings_row.xml
+++ b/app/src/main/res/layout/standings_row.xml
@@ -1,92 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/screen_background"
     android:padding="0dp"
     android:layout_marginBottom="3dp">
 
     <TextView
-           android:id="@+id/tvMestoNaTabeli"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/screen_font"
-        android:gravity="right"  />
+        android:id="@+id/tvMestoNaTabeli"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:textColor="@color/screen_font"
+        android:gravity="right" />
 
-        <TextView
-            android:id="@+id/tvTeamName"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/screen_font"
-            android:ellipsize="end"   />
+    <TextView
+        android:id="@+id/tvTeamName"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:textColor="@color/screen_font"
+        android:ellipsize="end" />
 
 
     <TextView
         android:id="@+id/tvPlayed"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
-        android:gravity="right"   />
+        android:gravity="right" />
+
     <TextView
         android:id="@+id/tvWin"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
-        android:gravity="right"    />
+        android:gravity="right" />
+
     <TextView
         android:id="@+id/tvDraw"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
-        android:gravity="right"   />
+        android:gravity="right" />
+
     <TextView
         android:id="@+id/tvLose"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
-        android:gravity="right"   />
+        android:gravity="right" />
 
 
     <TextView
         android:id="@+id/tvGoalDiff"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
         android:gravity="center_horizontal"
-        android:text="10:10"/>
+        android:text="10:10" />
 
     <TextView
         android:id="@+id/tvPoints"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
 
         android:layout_margin="0dp"
 
         android:textColor="@color/screen_font"
         android:gravity="right"
-        android:text="10"/>
+        android:text="10" />
 
 </LinearLayout>
