--- a/app/src/main/res/drawable/actionbutton.xml
+++ b/app/src/main/res/drawable/actionbutton.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
+    android:shape="rectangle">
     <stroke
         android:height="1.0dip"
         android:width="1.0dip"
         android:color="@color/btn1_border" />
     <solid android:color="@color/btn1_gradient_start" />
-   <gradient android:angle="270" android:startColor="@color/btn1_gradient_start" android:endColor="@color/btn1_gradient_end"  />
-    <corners android:bottomRightRadius="3dip"
+    <gradient
+        android:angle="270"
+        android:startColor="@color/btn1_gradient_start"
+        android:endColor="@color/btn1_gradient_end" />
+    <corners
+        android:bottomRightRadius="3dip"
         android:bottomLeftRadius="3dip"
         android:topRightRadius="3dip"
-        android:topLeftRadius="3dip"/>
+        android:topLeftRadius="3dip" />
 </shape>
