--- a/app/src/main/res/drawable/color_track.xml
+++ b/app/src/main/res/drawable/color_track.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <size android:height="40dp"  />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <size android:height="40dp" />
 
     <stroke
         android:height="1.0dip"
         android:width="1.0dip"
         android:color="@color/baselight" />
     <solid android:color="@color/baselight" />
-    <corners android:bottomRightRadius="4dip"
+    <corners
+        android:bottomRightRadius="4dip"
         android:bottomLeftRadius="4dip"
         android:topRightRadius="4dip"
-        android:topLeftRadius="4dip"/>
+        android:topLeftRadius="4dip" />
 
 
 </shape>
