--- a/app/src/main/res/layout/activity_fixtures.xml
+++ b/app/src/main/res/layout/activity_fixtures.xml
@@ -3,8 +3,8 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/screen_background"
@@ -20,8 +20,7 @@
         android:paddingRight="5dp"
         android:textSize="20dp"
         android:textColor="@color/screen_font"
-        android:text="@string/prompt_sezona"
-        />
+        android:text="@string/prompt_sezona" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,20 +46,19 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="LARGE_BANNER"
-        ads:adUnitId="@string/admob_banner_onfixtures">
-    </com.google.android.gms.ads.AdView>
-
+        ads:adUnitId="@string/admob_banner_onfixtures"></com.google.android.gms.ads.AdView>
 
 
     <ProgressBar
-       android:layout_width="fill_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
         android:id="@+id/pbarFixtures"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:max="100"
-        android:progress="0"/>
+        android:progress="0" />
 
 </RelativeLayout>
