--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/screen_white"
     tools:context="com.logotet.fkdedinjebgd.HomeActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,17 +17,17 @@
         android:textColor="@color/baseclr"
         android:layout_alignParentTop="true"
         android:textSize="24dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp" />
 
     <ImageView
-        android:layout_width="280dp"
-        android:layout_height="280dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:id="@+id/ivMainPhoto"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tvPunNaziv"
-        />
+        android:layout_below="@+id/tvPunNaziv" />
 
-        <!--android:src="@drawable/"-->
+    <!--android:src="@drawable/"-->
 
 
     <TextView
@@ -33,37 +36,43 @@
         android:id="@+id/tvPromptDatumOsnivanja"
         android:gravity="right"
         android:text="@string/prompt_datum_osnivanja"
+        android:textSize="14dp"
         android:layout_below="@+id/ivMainPhoto"
         android:layout_marginRight="10dp"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvDatumOsnivanja"
         android:layout_below="@+id/ivMainPhoto"
         android:layout_toRightOf="@+id/tvPromptDatumOsnivanja"
+        android:textSize="14dp"
         android:text="********"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
 
     <TextView
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptAdresa"
         android:text="@string/prompt_adresa"
+        android:textSize="14dp"
         android:gravity="right"
         android:layout_marginRight="10dp"
         android:layout_below="@+id/tvPromptDatumOsnivanja"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAdresa"
+        android:textSize="14dp"
         android:text="********"
         android:layout_below="@+id/tvDatumOsnivanja"
         android:layout_toRightOf="@+id/tvPromptAdresa"
-        android:textColor="@color/baseclr"/>
-    
-    
+        android:textColor="@color/baseclr" />
+
+
     <TextView
         android:layout_width="120dp"
         android:layout_height="wrap_content"
@@ -71,33 +80,40 @@
         android:gravity="right"
         android:layout_marginRight="10dp"
         android:text="@string/prompt_mesto"
+        android:textSize="14dp"
         android:layout_below="@+id/tvPromptAdresa"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvMesto"
         android:text="********"
+        android:textSize="14dp"
         android:layout_below="@+id/tvAdresa"
         android:layout_toRightOf="@+id/tvPromptMesto"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
+
     <TextView
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptEmail"
         android:gravity="right"
         android:layout_marginRight="10dp"
+        android:textSize="14dp"
         android:text="@string/prompt_email"
         android:layout_below="@+id/tvPromptMesto"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvEmail"
         android:text="********"
+        android:textSize="14dp"
         android:layout_below="@+id/tvMesto"
         android:layout_toRightOf="@+id/tvPromptEmail"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
 
     <TextView
         android:layout_width="120dp"
@@ -105,17 +121,20 @@
         android:id="@+id/tvPromptWeb"
         android:gravity="right"
         android:layout_marginRight="10dp"
+        android:textSize="14dp"
         android:text="@string/prompt_web"
         android:layout_below="@+id/tvPromptEmail"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvWeb"
         android:text="********"
+        android:textSize="14dp"
         android:layout_below="@+id/tvEmail"
         android:layout_toRightOf="@+id/tvPromptWeb"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
 
 
     <TextView
@@ -123,18 +142,21 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptPib"
         android:gravity="right"
+        android:textSize="14dp"
         android:layout_marginRight="10dp"
         android:text="@string/prompt_pib"
         android:layout_below="@+id/tvPromptWeb"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvPib"
         android:layout_below="@+id/tvWeb"
         android:text="********"
+        android:textSize="14dp"
         android:layout_toRightOf="@+id/tvPromptPib"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
 
     <TextView
         android:layout_width="120dp"
@@ -142,44 +164,52 @@
         android:id="@+id/tvPrompMatbroj"
         android:gravity="right"
         android:layout_marginRight="10dp"
+        android:textSize="14dp"
         android:text="@string/prompt_matbroj"
         android:layout_below="@+id/tvPromptPib"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvMatbroj"
         android:text="********"
+        android:textSize="14dp"
         android:layout_below="@+id/tvPromptPib"
         android:layout_toRightOf="@+id/tvPrompMatbroj"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
+
     <TextView
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptTekrac"
         android:gravity="right"
+        android:textSize="14dp"
         android:layout_marginRight="10dp"
         android:text="@string/prompt_tekrac"
         android:layout_below="@+id/tvPrompMatbroj"
-        android:textColor="@color/verydark"/>
+        android:textColor="@color/verydark" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTekrac"
         android:layout_below="@+id/tvMatbroj"
+        android:textSize="14dp"
         android:text="********"
         android:layout_toRightOf="@+id/tvPrompMatbroj"
-        android:textColor="@color/baseclr"/>
+        android:textColor="@color/baseclr" />
 
     <ProgressBar
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
         android:id="@+id/pbarHome"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:max="100"
-        android:progress="0"/>
+        android:progress="0" />
 
 </RelativeLayout>
