--- a/app/src/main/res/layout/activity_standings.xml
+++ b/app/src/main/res/layout/activity_standings.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screen_background"
@@ -33,8 +33,8 @@
         android:layout_width="fill_parent"
         android:layout_height="4dp"
 
-        android:layout_marginBottom="10dp"
         android:layout_below="@id/tvOdigranoKolo"
+        android:layout_marginBottom="10dp"
         android:background="@color/complementlght" />
 
     <ListView
@@ -47,23 +47,22 @@
         android:id="@+id/ad1View"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         ads:adSize="MEDIUM_RECTANGLE"
-        ads:adUnitId="@string/admob_banner_onstandings">
-    </com.google.android.gms.ads.AdView>
-
+        ads:adUnitId="@string/admob_banner_onstandings"></com.google.android.gms.ads.AdView>
 
 
     <ProgressBar
+        android:id="@+id/pbarStandings"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pbarStandings"
-        android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:max="100"
-        android:progress="0"/>
+        android:progress="0" />
 
 </RelativeLayout>
