--- a/app/src/main/res/layout/activity_testmain.xml
+++ b/app/src/main/res/layout/activity_testmain.xml
@@ -1,9 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <Button
         android:layout_width="wrap_content"
@@ -21,5 +24,5 @@
         android:id="@+id/btnSound"
         android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btnGo"/>
+        android:layout_below="@+id/btnGo" />
 </RelativeLayout>
