--- a/app/src/main/res/layout/awayevent_row.xml
+++ b/app/src/main/res/layout/awayevent_row.xml
@@ -13,14 +13,14 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:textColor="@color/screen_font"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
     <ImageView
         android:id="@+id/ivaSecondIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/tvaEventMinut"   />
+        android:layout_toRightOf="@id/tvaEventMinut" />
 
     <TextView
         android:id="@+id/tvaPlayer"
@@ -29,7 +29,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:textColor="@color/screen_font"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
 
     <ImageView
@@ -49,7 +49,7 @@
         android:layout_toLeftOf="@id/ivaFirstIcon"
         android:gravity="clip_horizontal"
         android:textColor="@color/complementlght"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
 
 </RelativeLayout>
