--- a/app/src/main/res/layout/awayswap_row.xml
+++ b/app/src/main/res/layout/awayswap_row.xml
@@ -7,7 +7,6 @@
     android:padding="0dp">
 
 
-
     <TextView
         android:id="@+id/tvaEventMinutSwap"
         android:layout_width="30dp"
@@ -16,7 +15,7 @@
         android:layout_centerVertical="true"
         android:text="15'"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
 
     <ImageView
@@ -36,7 +35,7 @@
         android:layout_toRightOf="@id/tvaSecondIconSwap"
         android:text="Petar Petrovic"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/tvaFirstIconSwap"
@@ -55,7 +54,7 @@
         android:layout_toRightOf="@id/tvaFirstIconSwap"
         android:text="janko jankovic"
         android:textColor="@color/complementlght"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
 
 </RelativeLayout>
