--- a/app/src/main/res/layout/clientsastav_row.xml
+++ b/app/src/main/res/layout/clientsastav_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tvcBrojNaDresu"
@@ -8,16 +9,16 @@
         android:padding="0dp"
         android:layout_height="wrap_content"
         android:background="@color/verydark"
-        android:textSize="12sp"
-        android:textColor="@color/complementlght"/>
+        android:textSize="12dp"
+        android:textColor="@color/complementlght" />
 
     <TextView
         android:id="@+id/tvcIgracUProtokolu"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="0dp"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:background="@color/verydark"
-        android:paddingLeft="10dp"/>
+        android:paddingLeft="10dp" />
 
 </LinearLayout>
