--- a/app/src/main/res/layout/fixtures_row.xml
+++ b/app/src/main/res/layout/fixtures_row.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/screen_background"
     android:padding="0dp"
     android:layout_marginBottom="3dp">
-    <TextView
-           android:id="@+id/tvDatum"
-            android:layout_width="65dp"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-        android:layout_marginRight="5dp"
-            android:textColor="@color/screen_font"
-        android:gravity="right"/>
 
-        <TextView
-            android:id="@+id/tvTeamHome"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/screen_font"
-            android:gravity="right"
-            android:ellipsize="end"            />
+    <TextView
+        android:id="@+id/tvDatum"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:layout_marginRight="5dp"
+        android:textColor="@color/screen_font"
+        android:gravity="right" />
+
+    <TextView
+        android:id="@+id/tvTeamHome"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:textColor="@color/screen_font"
+        android:gravity="right"
+        android:ellipsize="end" />
+
     <TextView
         android:id="@+id/tvScore"
         android:layout_width="28dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:textColor="@color/complementlght"
-        android:gravity="center_horizontal"       />
+        android:gravity="center_horizontal" />
+
     <TextView
         android:id="@+id/tvTeamAway"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:textColor="@color/screen_font"
         android:ellipsize="end"
-        android:gravity="left"    />
+        android:gravity="left" />
 </LinearLayout>
