--- a/app/src/main/res/layout/homeswap_row.xml
+++ b/app/src/main/res/layout/homeswap_row.xml
@@ -14,7 +14,7 @@
         android:layout_centerVertical="true"
         android:text="15'"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/tvhPlayerIn"
@@ -24,7 +24,7 @@
         android:layout_toRightOf="@id/tvhEventMinutSwap"
         android:text="Petar Petrovic"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/tvhFirstIconSwap"
@@ -43,7 +43,7 @@
         android:layout_toRightOf="@id/tvhFirstIconSwap"
         android:text="janko jankovic"
         android:textColor="@color/complementlght"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/tvhSecondIconSwap"
