--- a/app/src/main/res/layout/igrac_row.xml
+++ b/app/src/main/res/layout/igrac_row.xml
@@ -7,7 +7,8 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/ivIgracIcon"/>
+        android:id="@+id/ivIgracIcon" />
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -17,7 +18,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/screen_font"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true" />
@@ -26,17 +27,17 @@
             android:id="@+id/tvGodiste"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_marginRight="2dp"
             android:textColor="@color/screen_font"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvName"/>
+            android:layout_below="@+id/tvName" />
 
         <TextView
             android:id="@+id/tvPozicija"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/screen_font"
             android:layout_alignBaseline="@+id/tvGodiste"
             android:layout_below="@+id/tvName"
@@ -46,20 +47,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvVisina"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/screen_font"
             android:layout_alignParentRight="true"
-            android:paddingRight="20dp"/>
+            android:paddingRight="20dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTezina"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/screen_font"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tvVisina"
             android:layout_alignBaseline="@+id/tvGodiste"
-            android:paddingRight="20dp"/>
+            android:paddingRight="20dp" />
     </RelativeLayout>
 
 </LinearLayout>
