--- a/app/src/main/res/layout/manager_row.xml
+++ b/app/src/main/res/layout/manager_row.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/screen_background">
 
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/ivManagerIcon"/>
+        android:id="@+id/ivManagerIcon" />
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -16,7 +18,7 @@
             android:id="@+id/tvManagerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/screen_font"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true" />
@@ -25,7 +27,7 @@
             android:id="@+id/tvFunkcija"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/screen_font"
             android:layout_below="@+id/tvManagerName"
             android:layout_alignParentLeft="true" />
