--- a/app/src/main/res/layout/swapevent_row.xml
+++ b/app/src/main/res/layout/swapevent_row.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:textColor="@color/screen_font"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
     <TextView
         android:id="@+id/tvPlayerIn"
@@ -24,7 +24,7 @@
         android:gravity="right"
         android:paddingRight="5dp"
         android:textColor="@color/complementlght"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
     <ImageView
         android:id="@+id/ivFirstIconSwap"
@@ -42,7 +42,7 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/ivFirstIconSwap"
         android:textColor="@color/baselight"
-        android:textSize="12sp" />
+        android:textSize="12dp" />
 
 
 </RelativeLayout>
