--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,18 +17,18 @@
         android:textColor="@color/baseclr"
         android:layout_alignParentTop="true"
         android:textSize="24dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="1dp" />
 
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:id="@+id/ivMainPhoto"
+        android:layout_marginBottom="1dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/tvPunNaziv" />
 
     <!--android:src="@drawable/"-->
-
 
     <TextView
         android:layout_width="120dp"
