--- a/app/src/main/res/layout/fragment_portret.xml
+++ b/app/src/main/res/layout/fragment_portret.xml
@@ -9,8 +9,8 @@
         android:layout_height="match_parent"
         android:background="@color/screen_background"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <ImageView
@@ -28,9 +28,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/ivPortret"
-            android:paddingTop="0dp"
-            android:layout_marginTop="0dp"
             android:layout_marginBottom="15dp"
+            android:layout_marginTop="0dp"
+            android:paddingTop="0dp"
             android:text="sfdsdfsd"
             android:textColor="@color/screen_font"
             android:textSize="10dp" />
@@ -41,9 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tvSlideNumber"
-            android:text="sfdsdfsd"
+            android:text="wwwwwww qqqqqqqqq"
             android:textColor="@color/screen_font"
-            android:textSize="22dp" />
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/tvBirthYear"
@@ -53,9 +53,9 @@
             android:layout_below="@+id/tvSlideNumber"
             android:layout_toRightOf="@+id/tvFullName"
             android:gravity="right"
-            android:text="sfdsdfsd"
+            android:text="2000."
             android:textColor="@color/screen_font"
-            android:textSize="22dp" />
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/tvDefaultPozicija"
@@ -65,7 +65,7 @@
             android:layout_below="@+id/tvFullName"
             android:text="pozicija"
             android:textColor="@color/screen_font"
-            android:textSize="18dp" />
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/tvHeight"
@@ -83,10 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvFullName"
-
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/tvHeight"
-
             android:gravity="right"
             android:text="88kg"
             android:textColor="@color/screen_font"
@@ -96,9 +94,9 @@
             android:id="@+id/tvNapomena"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDefaultPozicija"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
+            android:layout_below="@+id/tvDefaultPozicija"
             android:layout_marginTop="5dp"
             android:singleLine="false"
             android:textColor="@color/screen_font"
